{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "5facc8c5-2cc4-422a-8e0d-0780def3ed6e",
            "actions": [
                {
                    "name": "Rolling",
                    "type": "Value",
                    "id": "492248a7-5b88-4541-bfc4-6e19b1ad1788",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "de921c7a-ed83-4f8f-a1e0-2689253f8cc1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rolling",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "507dfc10-256f-445f-98f1-7d6ff8db43d8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rolling",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bb5ec83e-9a30-4fbe-aced-8d699523a5ca",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rolling",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "02dba59b-5e29-4304-9f0e-b39e66c52783",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rolling",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bfbdf9fb-9cfa-4a68-bdd1-f9bb06c2f498",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rolling",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}